--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 <h1>Geet Duggal</h1>
 <p><a href="https://www.linkedin.com/in/geet-duggal">LinkedIn Profile</a> · <a href="https://gist.github.com/geetduggal/d9702695b96b13532a291d74f7a38e38">vimrc</a> · <a href="https://gist.github.com/geetduggal/e0a92aeb7162cc5c4abbef26233c71e5">settings.json</a> · </a><a href='https://www.newyorker.com/culture/infinite-scroll/the-revenge-of-the-home-page'>The revenge of the home page</a>  </p>
 <table>
-<tr><td nowrap width=50px>2024-10-08</td><td><div id='typing' class='typing-animation'></div></td></tr>
+<tr><td nowrap width=50px>2024-10-27</td><td><div id='typing' class='typing-animation'></div></td></tr>
+<tr><td nowrap width=50px>2024-10-14</td><td>Fourth post on 'Tech Habits' live!</td></tr>
+<tr><td nowrap width=50px>2024-10-08</td><td>AI-assisted programming is hot: Lex Fridman has an interesting podcast with the Cursor folks and OpenAI just released ChatGPT Canvas</td></tr>
 <tr><td nowrap width=50px>2024-10-05</td><td>Third post on 'Tech Habits' live!</td></tr>
 <tr><td nowrap width=50px>2024-09-29</td><td>Vim tip: open multiple files in split mode (horizontal) with 'vi -o <files>'</td></tr>
 <tr><td nowrap width=50px>2024-09-21</td><td>Second post on 'Tech Habits' live!</td></tr>
 <tr><td nowrap width=50px>2024-09-20</td><td>Just heard on a podcast that Cal Newport has a similar idea as my 'written workflow' for Weather Resistant Productivity. He calls it a 'core system'.  Weather resistant productivity expands on it a bit and has a lot of other dimensions but was fun to see this independent affirmation of writing down your system having value!</td></tr>
-<tr><td nowrap width=50px>2024-09-18</td><td>Open the current file’s directory in netrw: Press :, then type :e %:h</td></tr>
-<tr><td nowrap width=50px>2024-09-16</td><td>Vim tip: Ctrl-w x to swap the current window with the next window.</td></tr>
 </table>
 
 <script>
-  const text = "AI-assisted programming is hot: Lex Fridman has an interesting podcast with the Cursor folks and OpenAI just released ChatGPT Canvas";
+  const text = "🎃 <a href='https://www.youtube.com/watch?v=pCRAnf1UCLA'>Halloween at Hogwarts</a>";
   let index = 0;
 
 
@@ -56,35 +56,67 @@ See all Geets with ability to permalink on
 </p>
 
 <h2>Articles</h2><table>
+['2024-10-14', 'Tech Habits: The Problem with Task Batching', 'techhabits-004-task-batching.md', 'https://medium.com/@geetduggal/tech-habits-the-problem-with-task-batching-41f0a7ab9f49']
+<tr><td nowrap width=50px>2024-10-14</td><td><a href='https://medium.com/@geetduggal/tech-habits-the-problem-with-task-batching-41f0a7ab9f49'>Tech Habits: The Problem with Task Batching</a></td></tr>
+['2024-10-06', 'Tech Habits: Managing Project Lists in Plain Text Files and Obsidian', 'techhabits-003-projects.md', 'https://medium.com/@geetduggal/tech-habits-managing-project-lists-in-plain-text-files-and-obsidian-a51c5e72f5ac']
 <tr><td nowrap width=50px>2024-10-06</td><td><a href='https://medium.com/@geetduggal/tech-habits-managing-project-lists-in-plain-text-files-and-obsidian-a51c5e72f5ac'>Tech Habits: Managing Project Lists in Plain Text Files and Obsidian</a></td></tr>
+['2024-09-22', 'Tech Habits: Capture Everything in One Place?', 'techhabits-002-doubledown-wrp.md', 'https://medium.com/@geetduggal/tech-habits-capture-everything-in-one-place-dd3f20fee466']
 <tr><td nowrap width=50px>2024-09-22</td><td><a href='https://medium.com/@geetduggal/tech-habits-capture-everything-in-one-place-dd3f20fee466'>Tech Habits: Capture Everything in One Place?</a></td></tr>
+['2024-09-06', 'Tech Habits: Obsidian Live Preview, Vi Focus Mode, & Alarms for Calendar Events', 'techhabits-001-obsdian-vi-alarms.pdf', 'https://medium.com/@geetduggal/tech-habits-obsidian-live-preview-vi-focus-mode-alarms-for-calendar-events-8c42976be5af']
 <tr><td nowrap width=50px>2024-09-06</td><td><a href='https://medium.com/@geetduggal/tech-habits-obsidian-live-preview-vi-focus-mode-alarms-for-calendar-events-8c42976be5af'>Tech Habits: Obsidian Live Preview, Vi Focus Mode, & Alarms for Calendar Events</a></td></tr>
+['2024-08-27', 'Weather Resistant Productivity', 'wrp.pdf', 'https://medium.com/@geetduggal/2a90c4357068']
 <tr><td nowrap width=50px>2024-08-27</td><td><a href='https://medium.com/@geetduggal/2a90c4357068'>Weather Resistant Productivity</a></td></tr>
+['2024-07-30', 'OAuth (An Example PKE Article)', 'oauthpke.pdf', 'https://github.com/geetduggal/geetduggal.github.io/blob/master/pke/OAuth.md']
 <tr><td nowrap width=50px>2024-07-30</td><td><a href='https://github.com/geetduggal/geetduggal.github.io/blob/master/pke/OAuth.md'>OAuth (An Example PKE Article)</a></td></tr>
+['2024-07-24', 'Want Extraordinarily Useful and Timeless Notes? Build a Personal Knowledge Encyclopedia.', 'pke.pdf', 'https://medium.com/@geetduggal/want-extraordinarily-useful-and-timeless-notes-build-a-personal-knowledge-encyclopedia-bc8b7fb09829']
 <tr><td nowrap width=50px>2024-07-24</td><td><a href='https://medium.com/@geetduggal/want-extraordinarily-useful-and-timeless-notes-build-a-personal-knowledge-encyclopedia-bc8b7fb09829'>Want Extraordinarily Useful and Timeless Notes? Build a Personal Knowledge Encyclopedia.</a></td></tr>
+['2024-07-01', 'A “No-Code”ish Approach for Using Obsidian & AI To Process Your Notes the Way You Want', 'obsidianAInocode.pdf', 'https://medium.com/@geetduggal/a-no-code-ish-approach-for-using-obsidian-ai-to-process-your-notes-the-way-you-want-50714ceaf9c3']
 <tr><td nowrap width=50px>2024-07-01</td><td><a href='https://medium.com/@geetduggal/a-no-code-ish-approach-for-using-obsidian-ai-to-process-your-notes-the-way-you-want-50714ceaf9c3'>A “No-Code”ish Approach for Using Obsidian & AI To Process Your Notes the Way You Want</a></td></tr>
+['2024-06-20', 'Discipline Absorbs Chaos. Try This Game-Changing & Simple Way to Manage Your Time.', 'dac.pdf', 'https://medium.com/@geetduggal/discipline-absorbs-chaos-try-this-game-changing-simple-way-to-manage-your-time-14e262ca05bc']
 <tr><td nowrap width=50px>2024-06-20</td><td><a href='https://medium.com/@geetduggal/discipline-absorbs-chaos-try-this-game-changing-simple-way-to-manage-your-time-14e262ca05bc'>Discipline Absorbs Chaos. Try This Game-Changing & Simple Way to Manage Your Time.</a></td></tr>
+['2024-05-26', 'The Most Useful iOS Shortcut for Obsidian (and Beyond!) Revisited', 'bestshortcut.pdf', 'https://medium.com/@geetduggal/the-most-useful-ios-shortcut-for-obsidian-and-beyond-revisited-9692e62c993a']
 <tr><td nowrap width=50px>2024-05-26</td><td><a href='https://medium.com/@geetduggal/the-most-useful-ios-shortcut-for-obsidian-and-beyond-revisited-9692e62c993a'>The Most Useful iOS Shortcut for Obsidian (and Beyond!) Revisited</a></td></tr>
+['2024-05-08', 'Your Obsidian Workflow is Missing a Physical Notebook', 'obsidianbujo2.pdf', 'https://medium.com/@geetduggal/your-obsidian-workflow-is-missing-a-physical-notebook-2e99866edcfc']
 <tr><td nowrap width=50px>2024-05-08</td><td><a href='https://medium.com/@geetduggal/your-obsidian-workflow-is-missing-a-physical-notebook-2e99866edcfc'>Your Obsidian Workflow is Missing a Physical Notebook</a></td></tr>
+['2024-04-22', 'Bullet Journals and Obsidian', 'obsidianbujo.pdf', 'https://medium.com/@geetduggal/bullet-journals-and-obsidian-15c52584cd83']
 <tr><td nowrap width=50px>2024-04-22</td><td><a href='https://medium.com/@geetduggal/bullet-journals-and-obsidian-15c52584cd83'>Bullet Journals and Obsidian</a></td></tr>
+['2024-04-07', 'It Was Love At First Sight with This Obsidian Plugin', 'obsidianthino.pdf', 'https://medium.com/@geetduggal/it-was-love-at-first-sight-with-this-obsidian-plugin-0616630becf7']
 <tr><td nowrap width=50px>2024-04-07</td><td><a href='https://medium.com/@geetduggal/it-was-love-at-first-sight-with-this-obsidian-plugin-0616630becf7'>It Was Love At First Sight with This Obsidian Plugin</a></td></tr>
+['2024-02-26', 'How to Create a Simple Personal Finance Dashboard in Obsidian', 'obsidianfinance2.pdf', 'https://medium.com/@geetduggal/how-to-create-a-simple-personal-finance-dashboard-in-obsidian-2f238627286a']
 <tr><td nowrap width=50px>2024-02-26</td><td><a href='https://medium.com/@geetduggal/how-to-create-a-simple-personal-finance-dashboard-in-obsidian-2f238627286a'>How to Create a Simple Personal Finance Dashboard in Obsidian</a></td></tr>
+['2024-02-17', 'Satisfy the Beast. Science the Sh-t Out of Difficult Tasks and Habits', 'sb.pdf', 'https://medium.com/@geetduggal/satisfy-the-beast-science-the-sh-t-out-of-difficult-tasks-and-habits-18c4e3d2f04a']
 <tr><td nowrap width=50px>2024-02-17</td><td><a href='https://medium.com/@geetduggal/satisfy-the-beast-science-the-sh-t-out-of-difficult-tasks-and-habits-18c4e3d2f04a'>Satisfy the Beast. Science the Sh-t Out of Difficult Tasks and Habits</a></td></tr>
+['2024-01-05', 'The Power of Obsidian for Personal Finance Accounting', 'obsidianfinance.pdf', 'https://medium.com/@geetduggal/the-power-of-obsidian-for-personal-finance-accounting-f00bbcb1b66f']
 <tr><td nowrap width=50px>2024-01-05</td><td><a href='https://medium.com/@geetduggal/the-power-of-obsidian-for-personal-finance-accounting-f00bbcb1b66f'>The Power of Obsidian for Personal Finance Accounting</a></td></tr>
+['2023-12-16', 'Capture To Do. How I Manage Literally All My Tasks in Obsidian', 'cd.pdf', 'https://medium.com/@geetduggal/capture-to-do-d040e1bae4a6']
 <tr><td nowrap width=50px>2023-12-16</td><td><a href='https://medium.com/@geetduggal/capture-to-do-d040e1bae4a6'>Capture To Do. How I Manage Literally All My Tasks in Obsidian</a></td></tr>
+['2023-09-10', 'Powerful Task Creation with Siri and Fantastical', 'sirifantasical.pdf', 'https://medium.com/@geetduggal/powerful-task-creation-with-siri-and-fantastical-57423aa3cf14']
 <tr><td nowrap width=50px>2023-09-10</td><td><a href='https://medium.com/@geetduggal/powerful-task-creation-with-siri-and-fantastical-57423aa3cf14'>Powerful Task Creation with Siri and Fantastical</a></td></tr>
+['2022-07-23', 'The Most Useful iOS Shortcut for Obsidian', 'obsidianshortcut.pdf', 'https://medium.com/@geetduggal/the-most-useful-ios-shortcut-for-obsidian-450a4a751ab0']
 <tr><td nowrap width=50px>2022-07-23</td><td><a href='https://medium.com/@geetduggal/the-most-useful-ios-shortcut-for-obsidian-450a4a751ab0'>The Most Useful iOS Shortcut for Obsidian</a></td></tr>
+['2022-07-13', 'How To Use Obsidian as Your Companion for Ultimate Creativity', 'obsidianbsb.pdf', 'https://medium.com/@geetduggal/how-to-use-obsidian-as-your-companion-for-ultimate-creativity-65dabed92768']
 <tr><td nowrap width=50px>2022-07-13</td><td><a href='https://medium.com/@geetduggal/how-to-use-obsidian-as-your-companion-for-ultimate-creativity-65dabed92768'>How To Use Obsidian as Your Companion for Ultimate Creativity</a></td></tr>
+['2022-06-12', 'This Habit Forming Tip Helped Me Actually Make Habits Stick', 'habittip.pdf', 'https://medium.com/@geetduggal/this-habit-forming-tip-helped-me-actually-make-habits-stick-cdd8b5502e17']
 <tr><td nowrap width=50px>2022-06-12</td><td><a href='https://medium.com/@geetduggal/this-habit-forming-tip-helped-me-actually-make-habits-stick-cdd8b5502e17'>This Habit Forming Tip Helped Me Actually Make Habits Stick</a></td></tr>
+['2022-06-02', 'I Spent $50 On These Obsidian Plugins', 'obsidianplugins.pdf', 'https://medium.com/@geetduggal/i-spent-50-on-these-obsidian-plugins-750945f4010b']
 <tr><td nowrap width=50px>2022-06-02</td><td><a href='https://medium.com/@geetduggal/i-spent-50-on-these-obsidian-plugins-750945f4010b'>I Spent $50 On These Obsidian Plugins</a></td></tr>
+['2022-05-24', 'The Apple Home Theater', 'appletheater.pdf', 'https://medium.com/@geetduggal/the-apple-home-theater-7a0375f894e9']
 <tr><td nowrap width=50px>2022-05-24</td><td><a href='https://medium.com/@geetduggal/the-apple-home-theater-7a0375f894e9'>The Apple Home Theater</a></td></tr>
+['2022-05-22', 'How to Surface The Most Useful Reading Highlights in Obsidian', 'readwise.pdf', 'https://medium.com/@geetduggal/how-to-surface-the-most-useful-reading-highlights-in-obsidian-c2d50786c5ee']
 <tr><td nowrap width=50px>2022-05-22</td><td><a href='https://medium.com/@geetduggal/how-to-surface-the-most-useful-reading-highlights-in-obsidian-c2d50786c5ee'>How to Surface The Most Useful Reading Highlights in Obsidian</a></td></tr>
+['2022-05-20', 'Organize Your Notes, Projects and Tasks by Area of Responsibility', 'orgareas.pdf', 'https://medium.com/@geetduggal/organize-your-notes-projects-and-tasks-by-area-of-responsibility-18035702be22']
 <tr><td nowrap width=50px>2022-05-20</td><td><a href='https://medium.com/@geetduggal/organize-your-notes-projects-and-tasks-by-area-of-responsibility-18035702be22'>Organize Your Notes, Projects and Tasks by Area of Responsibility</a></td></tr>
+['2022-05-17', 'The 5 Reasons I Switched from Notion to Obsidian', 'notion2obsidian.pdf', 'https://medium.com/@geetduggal/the-5-reasons-i-switched-from-notion-to-obsidian-adebf802c1f9']
 <tr><td nowrap width=50px>2022-05-17</td><td><a href='https://medium.com/@geetduggal/the-5-reasons-i-switched-from-notion-to-obsidian-adebf802c1f9'>The 5 Reasons I Switched from Notion to Obsidian</a></td></tr>
+['2022-05-16', 'This Is How to Have Your Books and Articles Read to You for Free (iOS)', 'tts4all.pdf', 'https://medium.com/@geetduggal/this-is-how-to-have-your-books-and-articles-read-to-you-for-free-ee2bd9540d4c']
 <tr><td nowrap width=50px>2022-05-16</td><td><a href='https://medium.com/@geetduggal/this-is-how-to-have-your-books-and-articles-read-to-you-for-free-ee2bd9540d4c'>This Is How to Have Your Books and Articles Read to You for Free (iOS)</a></td></tr>
+['2022-05-15', 'This Simple Journaling Method Could Change Your Life', 'interstitialjourn.pdf', 'https://medium.com/@geetduggal/this-simple-journaling-method-could-change-your-life-638b51fac9d8']
 <tr><td nowrap width=50px>2022-05-15</td><td><a href='https://medium.com/@geetduggal/this-simple-journaling-method-could-change-your-life-638b51fac9d8'>This Simple Journaling Method Could Change Your Life</a></td></tr>
+['2016-12-02', 'Reflections on AWS re:Invent 2016', 'reinvent2016.pdf', 'https://medium.com/@geetduggal/reflections-on-aws-re-invent-2016-e59a847d0463']
 <tr><td nowrap width=50px>2016-12-02</td><td><a href='https://medium.com/@geetduggal/reflections-on-aws-re-invent-2016-e59a847d0463'>Reflections on AWS re:Invent 2016</a></td></tr>
+['2016-12-01', '‘Editor-First’ vs. ‘Terminal-First’ for Development', 'viterm.pdf', 'https://medium.com/@geetduggal/editor-first-vs-terminal-first-for-development-efea6b02d294']
 <tr><td nowrap width=50px>2016-12-01</td><td><a href='https://medium.com/@geetduggal/editor-first-vs-terminal-first-for-development-efea6b02d294'>‘Editor-First’ vs. ‘Terminal-First’ for Development</a></td></tr>
+['2014-11-11', 'Old Wordpress Blog', 'oldblog.pdf', 'https://geetduggal.wordpress.com']
 <tr><td nowrap width=50px>2014-11-11</td><td><a href='https://geetduggal.wordpress.com'>Old Wordpress Blog</a></td></tr>
 </table>
 
@@ -190,7 +222,7 @@ See all Geets with ability to permalink on
             </svg>
         </button>
         <select id="streamSelect">
-            <option value="none">No Ambience</option>
+            <option value="none">🔇</option>
         </select>
         <div id="volumeControls" class="volume-controls"></div> <!-- Volume sliders -->
     </div>
