--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <p>
 See all Geets with ability to permalink on
-<a href='https://github.com/geetduggal/geetduggal.github.io/blob/master/geets.tsv'>Github</a>.
+<a href='https://github.com/geetduggal/geetduggal.github.io/blob/master/geets.csv'>Github</a>.
 </p>
 
 <h2>Articles</h2><table>
