--- a/footer.html
+++ b/footer.html
@@ -58,7 +58,7 @@
                 <path d="M6 6h12v12H6z"/>
             </svg>
         </button>
-        <select id="streamSelect">
+        <select id="streamSelect" style="width: 20px;">
             <option value="none">🔇</option>
         </select>
         <div id="volumeControls" class="volume-controls"></div> <!-- Volume sliders -->
