--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ See all Geets with ability to permalink on
 </p>
 
 <h2>Articles</h2><table>
+<tr><td nowrap width=50px>2024-12-02</td><td><a href='https://medium.com/@geetduggal/tech-habits-project-management-using-a-csv-file-vs-obsidian-kanban-2560f832d33c '>Tech Habits: Project Management Using a CSV File vs. Obsidian Kanban</a></td></tr>
 <tr><td nowrap width=50px>2024-10-14</td><td><a href='https://medium.com/@geetduggal/tech-habits-the-problem-with-task-batching-41f0a7ab9f49'>Tech Habits: The Problem with Task Batching</a></td></tr>
 <tr><td nowrap width=50px>2024-10-06</td><td><a href='https://medium.com/@geetduggal/tech-habits-managing-project-lists-in-plain-text-files-and-obsidian-a51c5e72f5ac'>Tech Habits: Managing Project Lists in Plain Text Files and Obsidian</a></td></tr>
 <tr><td nowrap width=50px>2024-09-22</td><td><a href='https://medium.com/@geetduggal/tech-habits-capture-everything-in-one-place-dd3f20fee466'>Tech Habits: Capture Everything in One Place?</a></td></tr>
@@ -190,7 +191,7 @@ See all Geets with ability to permalink on
                 <path d="M6 6h12v12H6z"/>
             </svg>
         </button>
-        <select id="streamSelect">
+        <select id="streamSelect" style="width: 20px;">
             <option value="none">🔇</option>
         </select>
         <div id="volumeControls" class="volume-controls"></div> <!-- Volume sliders -->
