--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 <h1>Geet Duggal</h1>
 <p><a href="https://www.linkedin.com/in/geet-duggal">LinkedIn Profile</a> · <a href="https://gist.github.com/geetduggal/d9702695b96b13532a291d74f7a38e38">vimrc</a> · <a href="https://gist.github.com/geetduggal/e0a92aeb7162cc5c4abbef26233c71e5">settings.json</a> · </a><a href='https://www.newyorker.com/culture/infinite-scroll/the-revenge-of-the-home-page'>The revenge of the home page</a>  </p>
 <table>
-<tr><td nowrap width=50px>2024-10-27</td><td><div id='typing' class='typing-animation'></div></td></tr>
-<tr><td nowrap width=50px>2024-10-14</td><td>Fourth post on 'Tech Habits' live!</td></tr>
-<tr><td nowrap width=50px>2024-10-08</td><td>AI-assisted programming is hot: Lex Fridman has an interesting podcast with the Cursor folks and OpenAI just released ChatGPT Canvas</td></tr>
-<tr><td nowrap width=50px>2024-10-05</td><td>Third post on 'Tech Habits' live!</td></tr>
-<tr><td nowrap width=50px>2024-09-29</td><td>Vim tip: open multiple files in split mode (horizontal) with 'vi -o <files>'</td></tr>
-<tr><td nowrap width=50px>2024-09-21</td><td>Second post on 'Tech Habits' live!</td></tr>
-<tr><td nowrap width=50px>2024-09-20</td><td>Just heard on a podcast that Cal Newport has a similar idea as my 'written workflow' for Weather Resistant Productivity. He calls it a 'core system'.  Weather resistant productivity expands on it a bit and has a lot of other dimensions but was fun to see this independent affirmation of writing down your system having value!</td></tr>
+<tr><td nowrap width=50px>2025-02-17</td><td><div id='typing' class='typing-animation'></div></td></tr>
+<tr><td nowrap width=50px>2025-01-27</td><td>Seventh installment of Tech Habits out!</td></tr>
+<tr><td nowrap width=50px>2025-01-24</td><td>The third and final BuJo post live! I call it 'Atlas Journaling'</td></tr>
+<tr><td nowrap width=50px>2025-01-07</td><td>Sixth installment of Tech Habits out!  Another quick one.</td></tr>
+<tr><td nowrap width=50px>2024-12-16</td><td>Good use of short term and working memory: memorize your schedule for the day!</td></tr>
+<tr><td nowrap width=50px>2024-12-02</td><td>Fifth installment of Tech Habits out!  Quick one.</td></tr>
+<tr><td nowrap width=50px>2024-12-02</td><td>Yes to <a href='https://support.apple.com/guide/mac-help/mac-window-tiling-icons-keyboard-shortcuts-mchl9674d0b0/mac'>native window tiling</a>.</td></tr>
 </table>
 
 <script>
-  const text = "🎃 <a href='https://www.youtube.com/watch?v=pCRAnf1UCLA'>Halloween at Hogwarts</a>";
+  const text = "monospacedness should be a word. Eighth installment of Tech Habits out!";
   let index = 0;
 
 
@@ -56,7 +56,11 @@ See all Geets with ability to permalink on
 </p>
 
 <h2>Articles</h2><table>
-<tr><td nowrap width=50px>2024-12-02</td><td><a href='https://medium.com/@geetduggal/tech-habits-project-management-using-a-csv-file-vs-obsidian-kanban-2560f832d33c '>Tech Habits: Project Management Using a CSV File vs. Obsidian Kanban</a></td></tr>
+<tr><td nowrap width=50px>2024-02-17</td><td><a href='https://medium.com/@geetduggal/tech-habits-atlas-journaling-one-big-text-file-and-new-experiments-433ede6c96c0'>Tech Habits: Atlas Journaling, One Big Text File, and New Experiments</a></td></tr>
+<tr><td nowrap width=50px>2024-01-27</td><td><a href='https://medium.com/@geetduggal/27672f999949'>Tech Habits: One Big Text File (OBTF) after 24 Hours</a></td></tr>
+<tr><td nowrap width=50px>2024-01-24</td><td><a href='https://medium.com/@geetduggal/atlas-journaling-a-unified-approach-for-seeing-the-big-picture-and-acting-with-focus-78804f26f5ab'>Atlas Journaling: A Unified Approach for Seeing the Big Picture and Acting with Focus</a></td></tr>
+<tr><td nowrap width=50px>2024-01-07</td><td><a href='https://medium.com/@geetduggal/tech-habits-the-right-time-to-experiment-with-task-and-capture-apps-06c775bc3aa9'>Tech Habits: Tech Habits: The Right Time to Experiment with Task and Capture Apps</a></td></tr>
+<tr><td nowrap width=50px>2024-12-02</td><td><a href='https://medium.com/@geetduggal/tech-habits-project-management-using-a-csv-file-vs-obsidian-kanban-2560f832d33c'>Tech Habits: Project Management Using a CSV File vs. Obsidian Kanban</a></td></tr>
 <tr><td nowrap width=50px>2024-10-14</td><td><a href='https://medium.com/@geetduggal/tech-habits-the-problem-with-task-batching-41f0a7ab9f49'>Tech Habits: The Problem with Task Batching</a></td></tr>
 <tr><td nowrap width=50px>2024-10-06</td><td><a href='https://medium.com/@geetduggal/tech-habits-managing-project-lists-in-plain-text-files-and-obsidian-a51c5e72f5ac'>Tech Habits: Managing Project Lists in Plain Text Files and Obsidian</a></td></tr>
 <tr><td nowrap width=50px>2024-09-22</td><td><a href='https://medium.com/@geetduggal/tech-habits-capture-everything-in-one-place-dd3f20fee466'>Tech Habits: Capture Everything in One Place?</a></td></tr>
@@ -131,75 +135,3 @@ See all Geets with ability to permalink on
 <a href='https://scholar.google.com/citations?user=1APlUC8AAAAJ&hl=en'>Google Scholar</a>.
 </p>
 
-    <form id="geetForm">
-        <label for="geetInput">Enter your Geet:</label>
-        <input class="input-box" type="text" id="geetInput" name="geetInput" required>
-        <button class="button" type="submit">Submit</button>
-        <button class="button" id="loginButton">Login with GitHub</button>
-    </form>
-    <script>
-        const clientId = 'Ov23lijztEAKMo8ij7cx';
-        const redirectUri = 'https://geetduggal.com/callback.html';
-
-        document.getElementById('loginButton').addEventListener('click', () => {
-            const githubAuthUrl = `https://github.com/login/oauth/authorize?client_id=${clientId}&redirect_uri=${redirectUri}&scope=repo`;
-            window.location.href = githubAuthUrl;
-        });
-
-        document.getElementById('geetForm').addEventListener('submit', async function(event) {
-            event.preventDefault();
-            const input = document.getElementById('geetInput').value;
-            const date = new Date().toISOString().split('T')[0];
-            const data = `${date},${input}`;
-
-            const token = localStorage.getItem('githubToken');
-            if (!token) {
-                alert('Please log in with GitHub first.');
-                return;
-            }
-
-            const response = await fetch('https://api.github.com/repos/geetduggal/geetduggal.github.io/dispatches', {
-                method: 'POST',
-                headers: {
-                    'Accept': 'application/vnd.github.v3+json',
-                    'Authorization': `Bearer ${token}`,
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    event_type: 'append_geet',
-                    client_payload: { data }
-                })
-            });
-
-            if (response.ok) {
-                alert('Done gone Geeted.');
-            } else {
-                alert('Submission failed. Are you Geet?');
-            }
-        });
-    </script>
-    <p></p>
-    <div class="container" id="floating">
-    <div class="controls">
-        <button id="playPauseButton" class="play-button">
-            <svg id="playIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="18px" height="18px">
-                <path d="M0 0h24v24H0z" fill="none"/>
-                <path d="M8 5v14l11-7z"/>
-            </svg>
-            <svg id="stopIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="18px" height="18px" style="display:none;">
-                <path d="M0 0h24v24H0z" fill="none"/>
-                <path d="M6 6h12v12H6z"/>
-            </svg>
-        </button>
-        <select id="streamSelect" style="width: 20px;">
-            <option value="none">🔇</option>
-        </select>
-        <div id="volumeControls" class="volume-controls"></div> <!-- Volume sliders -->
-    </div>
-    </div>
-    <div id="logContainer" style="border: 1px solid #ccc; padding: 10px; margin-top: 20px;">
-        <h2>Log Output</h2>
-    </div>
-
-    <script src="ambient-synth.js?v=0.1111111111"></script>
-</div> </body> </html>
